# fact_localization

./: .gitignore  config.py  plot copy.py  plot.py  plot_tracing.py  pyproject.toml  requirements.txt  rome.py
data/counterfact/: counterfact.txt  download.sh
experiments/: cache.py  causal_trace.py  demo.ipynb  lens_cache.py  noise.pt  noise.py  rewrite_score.py  stuff.py  test.py  tracing.py
localization/data/: __init__.py  ds.py
localization/data/counterfact/: counterfact_excerpt.txt
localization/data/hop/: hop_excerpt.txt
localization/data/ripple/: download.sh
localization/data/zsre/: download.sh
localization/optimal/: causal_tracing.py  subject_means.pth
localization/rome/: compute_cov.py  compute_u.py  compute_v.py  configs.py  rome.py  utils.py
localization/tracing/: noise.py
models/: __init__.py  gpt2_xl.py  wrapper.py
notebooks/: optimal.py  rome.py  traces.py
results/: top_100.csv
rome/: compute_cov.py  compute_u.py  compute_v.py  configs.py  repr_tools.py  rome.py  utils.py
scripts/: cache.sh  cache_uno.sh  mom2.sh  trace.sh
